// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/molecules/GraphKeyPoints.vue snapshot default 1`] = `
<g>
  <g
    class="view-only"
  >
    <g>
      
      <g>
        <g
          fill="none"
          stroke="green"
          stroke-width="2.2"
        >
          <!-- horizon before from -->
          <line
            x1="-20000"
            x2="0"
            y1="5"
            y2="5"
          />
          <!-- horizon after to -->
          
          <line
            stroke-width="2.2"
            x1="0"
            x2="0"
            y1="5"
            y2="50"
          />
          
        </g>
      </g>
      <g>
        <g
          fill="none"
          stroke="green"
          stroke-width="2.2"
        >
          <!-- horizon before from -->
          <!--v-if-->
          <!-- horizon after to -->
          <line
            x1="0"
            x2="20000"
            y1="50"
            y2="50"
          />
        </g>
      </g>
      
    </g>
  </g>
  <g>
    
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="5"
        fill="green"
        r="11"
        stroke="#000"
        stroke-width="2.2"
      />
      <circle
        cx="0"
        cy="5"
        fill="transparent"
        r="22"
      />
    </g>
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="50"
        fill="green"
        r="11"
        stroke="#000"
        stroke-width="2.2"
      />
      <circle
        cx="0"
        cy="50"
        fill="transparent"
        r="22"
      />
    </g>
    
  </g>
  <g>
    
    <g>
      <!--v-if-->
    </g>
    <g>
      <!--v-if-->
    </g>
    
  </g>
</g>
`;

exports[`src/components/elements/molecules/GraphKeyPoints.vue snapshot selected 1`] = `
<g>
  <g
    class="view-only"
  >
    <g>
      
      <g>
        <g
          fill="none"
          stroke="#fff"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <line
            x1="-20000"
            x2="0"
            y1="5"
            y2="5"
          />
          <!-- horizon after to -->
          
          <line
            stroke-width="1"
            x1="0"
            x2="0"
            y1="5"
            y2="50"
          />
          
        </g>
      </g>
      <g>
        <g
          fill="none"
          stroke="#fff"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <!--v-if-->
          <!-- horizon after to -->
          <line
            x1="0"
            x2="20000"
            y1="50"
            y2="50"
          />
        </g>
      </g>
      
    </g>
  </g>
  <g>
    
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="5"
        fill="orange"
        r="5"
        stroke="#000"
        stroke-width="1"
      />
      <circle
        cx="0"
        cy="5"
        fill="transparent"
        r="10"
      />
    </g>
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="50"
        fill="#fff"
        r="5"
        stroke="#000"
        stroke-width="1"
      />
      <circle
        cx="0"
        cy="50"
        fill="transparent"
        r="10"
      />
    </g>
    
  </g>
  <g>
    
    <g>
      <g>
        <g
          class="view-only"
          fill="#fff"
          stroke="#000"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
        <g
          fill="#fff"
          stroke="#000"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
        <g
          fill="transparent"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
      </g>
    </g>
    <g>
      <!--v-if-->
    </g>
    
  </g>
</g>
`;
